@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIInstallProfile.py,v 1.93 2006/07/20 22:32:53 wolf31o2 Exp $
+$Id: GLIInstallProfile.py,v 1.94 2006/09/01 22:41:04 wolf31o2 Exp $
 
 The GLI module contains all classes used in the Gentoo Linux Installer (or GLI).
 The InstallProfile contains all information related to the new system to be
@@ -577,12 +577,14 @@ class InstallProfile:
 	def get_install_package_list(self):
 		install_package_list = { 
 			'Desktop': ("Popular Desktop Applications",
-				{"audacious": "GTK music player",
-				"bittorrent": "tool for distributing files via a distributed network of nodes",
+				{"audacious": "GTK+ music player",
+				"easytag": "A GTK+ tagging program for MP3, OGG, FLAC, and more",
 				"evolution": "A GNOME groupware application, a Microsoft Outlook workalike",
-				"gaim": "GTK Instant Messenger client",
-				"gftp": "Gnome based FTP Client",
+				"gaim": "GTK+ Instant Messenger client",
+				"gftp": "GTK+ FTP Client",
 				"gimp": "GNU Image Manipulation Program",
+				"gnomebaker": "GNOME CD Writing Software",
+				"gtkam": "GTK+ application for transferring pictures from a digital camera",
 				"inkscape": "A SVG based generic vector-drawing program",
 				"k3b": "KDE CD Writing Software",
 				"koffice": "An integrated office suite for KDE, the K Desktop Environment",
@@ -595,9 +597,10 @@ class InstallProfile:
 				"pan": "GTK news reader",
 				"rhythmbox": "Music management and playback software for GNOME",
 				"seamonkey": "Open replacement for the Mozilla Suite",
+				"sylpheed": "A light weight email client and news reader",
 				"sylpheed-claws": "A light weight email client and news reader",
 				"vlc": "VLC media player - Video player and streamer",
-				"xchat": "GTK Graphical IRC Client",
+				"xchat": "GTK+ Graphical IRC Client",
 				"xine-ui": "Xine movie player",
 				"xmms": "X MultiMedia System"  }),
 			'Servers': ("Applications often found on servers.",
@@ -607,23 +610,26 @@ class InstallProfile:
 				"iptables": "Linux kernel (2.4+) firewall, NAT and packet mangling tools",
 				"mod_php": "Apache module for PHP",
 				"mysql": "A fast, multi-threaded, multi-user SQL database server",
+				"php": "The PHP scripting language",
 				"postfix": "A fast and secure drop-in replacement for sendmail",
 				"postgresql": "sophisticated Object-Relational DBMS",
 				"proftpd": "ProFTP Server",
 				"samba": "SAMBA client/server programs for UNIX",
-				"sendmail": "Widely-used Mail Transport Agent (MTA)",
-				"traceroute": "Utility to trace the route of IP packets"  }),
+				"sendmail": "Widely-used Mail Transport Agent (MTA)", }),
 			'X11': ("Window managers and X selection.", 
-				{"xorg-x11": "An X11 implementation maintained by the X.Org Foundation",
-				"gnome": "The Gnome Desktop Environment",
+				{"gnome": "The Gnome Desktop Environment",
 				"kde-meta": "The K Desktop Environment",
 				"blackbox": "A small, fast, full-featured window manager for X",
 				"enlightenment": "Enlightenment Window Manager",
 				"fluxbox": "Fluxbox is an X11 window manager featuring tabs and an iconbar",
-				"xfce4": "XFCE Desktop Environment"  }),
+				"icewm": "IceWM is designed for speed, size, and simplicity",
+				"windowmaker": "Windowmaker is a window manager featuring the look and feel of NEXTSTEP",
+				"xfce4": "XFCE Desktop Environment"
+				"xorg-x11": "An X11 implementation maintained by the X.Org Foundation" }),
 			'Misc': ("Miscellaneous Applications you may want.",
-				{"emacs": "An incredibly powerful, extensible text editor",
-				"ethereal": "A commercial-quality network protocol analyzer",
+				{"bittorrent": "tool for distributing files via a distributed network of nodes",
+				"bluefish": "GTK+ Web IDE",
+				"emacs": "An incredibly powerful, extensible text editor",
 				"gkrellm": "Single process stack of various system monitors",
 				"gvim": "GUI version of the Vim text editor",
 				"keychain": "ssh-agent manager",
@@ -631,13 +637,15 @@ class InstallProfile:
 				"ntp": "Network Time Protocol suite/programs",
 				"rdesktop": "A Remote Desktop Protocol Client",
 				"slocate": "Secure way to index and quickly search for files on your system",
+				"traceroute": "Utility to trace the route of IP packets",
 				"ufed": "Gentoo Linux USE flags editor",
-				"vim": "Vim, an improved vi-style text editor" }),
+				"vim": "Vim, an improved vi-style text editor",
+				"wireshark": "A commercial-quality network protocol analyzer" }),
 			'Recommended': ("Applications recommended by the GLI Team.",
 				{"anjuta": "A versatile IDE for GNOME",
 				"chkrootkit": "a tool to locally check for signs of a rootkit",
 				"crack-attack": "Addictive OpenGL-based block game",
-				"gnupg": "The GNU Privacy Guard, a GPL pgp replacement",
+				"gnupg": "The GNU Privacy Guard, a GPL PGP replacement",
 				"net-snmp": "Software for generating and retrieving SNMP data",
 				"netcat": "the network swiss army knife",
 				"nmap": "A utility for network exploration or security auditing",
