@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.673 2006/09/01 22:04:25 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.674 2006/09/01 22:41:04 wolf31o2 Exp $
+
+  01 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  src/GLIInstallProfile.py:
+  Added some more applications to the Extra Packages list.
 
   1 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/ppcArchitectureTemplate.py:
